--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
+  // Show the path in the top window bar.
+  "window.title": "${rootName}${separator}${activeEditorMedium}",
+
   "editor.renderWhitespace": "all",
+
   "[java]": {
     "editor.rulers": [
       100
