--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ POM_PACKAGING=jar
 POM_ORGANIZATION_URL=https://stripe.com
 
 VENDOR_NAME=Stripe, Inc. (https://stripe.com)
+
+# Workaround to prevent Java 12 to try and use TLSv1.3 when uploading coverage
+# reports to coveralls.io.
+systemProp.jdk.tls.client.protocols="TLSv1,TLSv1.1,TLSv1.2"
