--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ matrix:
     - jdk: openjdk11
     - jdk: openjdk12
     - jdk: openjdk13
+    - jdk: openjdk14
     - jdk: openjdk-ea
   allow_failures:
     - jdk: openjdk-ea
