--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,9 @@ plugins {
     id "io.freefair.lombok" version "5.2.1"
     id "com.diffplug.spotless" version "5.7.0"
     id "net.ltgt.errorprone" version "1.3.0"
-    id "com.github.kt3k.coveralls" version "2.10.1"
-    id "biz.aQute.bnd.builder" version "5.0.1"
-    id "org.ajoberstar.git-publish" version "3.0.0-rc.1"
+    id "com.github.kt3k.coveralls" version "2.10.2"
+    id "biz.aQute.bnd.builder" version "5.2.0"
+    id "org.ajoberstar.git-publish" version "3.0.0"
 }
 
 sourceCompatibility = 1.8
@@ -63,11 +63,11 @@ dependencies {
     errorprone group: "com.google.errorprone", name: "error_prone_core", version: "2.4.0"
     errorproneJavac group: "com.google.errorprone", name: "javac", version:"9+181-r4173-1"
     implementation group: "com.google.code.gson", name: "gson", version:"2.8.6"
-    testImplementation group: "com.google.guava", name: "guava", version:"28.2-jre"
-    testImplementation group: "com.squareup.okhttp3", name: "mockwebserver", version: "4.4.1"
-    testImplementation group: "org.mockito", name: "mockito-core", version:"3.3.3"
-    testImplementation group: "org.junit.jupiter", name: "junit-jupiter-api", version: "5.6.1"
-    testRuntimeOnly group: "org.junit.jupiter", name: "junit-jupiter-engine", version: "5.6.1"
+    testImplementation group: "com.google.guava", name: "guava", version:"30.0-jre"
+    testImplementation group: "com.squareup.okhttp3", name: "mockwebserver", version: "4.9.0"
+    testImplementation group: "org.mockito", name: "mockito-core", version:"3.5.15"
+    testImplementation group: "org.junit.jupiter", name: "junit-jupiter-api", version: "5.7.0"
+    testRuntimeOnly group: "org.junit.jupiter", name: "junit-jupiter-engine", version: "5.7.0"
     testRuntimeOnly group: "org.slf4j", name: "slf4j-api", version: "1.7.30"
 }
 
