--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
         //Add only for SNAPSHOT versions
         //maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
@@ -56,7 +56,7 @@ configurations.all {
 }
 
 repositories {
-     jcenter()
+     mavenCentral()
 }
 
 dependencies {
