--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,11 @@ plugins {
     id "java"
     id "maven"
     id "jacoco"
-    id "io.freefair.lombok" version "5.2.1"
-    id "com.diffplug.spotless" version "5.7.0"
-    id "net.ltgt.errorprone" version "1.3.0"
-    id "com.github.kt3k.coveralls" version "2.10.2"
-    id "biz.aQute.bnd.builder" version "5.2.0"
+    id "io.freefair.lombok" version "5.3.3.3" // 5.3 branch is the last branch compatible with Gradle 6
+    id "com.diffplug.spotless" version "5.14.3"
+    id "net.ltgt.errorprone" version "2.0.2"
+    id "com.github.kt3k.coveralls" version "2.12.0"
+    id "biz.aQute.bnd.builder" version "5.3.0"
     id "org.ajoberstar.git-publish" version "3.0.0"
 }
 
@@ -60,15 +60,15 @@ repositories {
 }
 
 dependencies {
-    errorprone group: "com.google.errorprone", name: "error_prone_core", version: "2.4.0"
+    errorprone group: "com.google.errorprone", name: "error_prone_core", version: "2.9.0"
     errorproneJavac group: "com.google.errorprone", name: "javac", version:"9+181-r4173-1"
-    implementation group: "com.google.code.gson", name: "gson", version:"2.8.6"
-    testImplementation group: "com.google.guava", name: "guava", version:"30.0-jre"
-    testImplementation group: "com.squareup.okhttp3", name: "mockwebserver", version: "4.9.0"
-    testImplementation group: "org.mockito", name: "mockito-core", version:"3.5.15"
-    testImplementation group: "org.junit.jupiter", name: "junit-jupiter-api", version: "5.7.0"
-    testRuntimeOnly group: "org.junit.jupiter", name: "junit-jupiter-engine", version: "5.7.0"
-    testRuntimeOnly group: "org.slf4j", name: "slf4j-api", version: "1.7.30"
+    implementation group: "com.google.code.gson", name: "gson", version:"2.8.8"
+    testImplementation group: "com.google.guava", name: "guava", version:"30.1.1-jre"
+    testImplementation group: "com.squareup.okhttp3", name: "mockwebserver", version: "4.9.1"
+    testImplementation group: "org.mockito", name: "mockito-core", version:"3.12.4"
+    testImplementation group: "org.junit.jupiter", name: "junit-jupiter-api", version: "5.7.2"
+    testRuntimeOnly group: "org.junit.jupiter", name: "junit-jupiter-engine", version: "5.7.2"
+    testRuntimeOnly group: "org.slf4j", name: "slf4j-api", version: "1.7.32"
 }
 
 jar {
@@ -84,7 +84,7 @@ jar {
 }
 
 lombok {
-    version = "1.18.16"
+    version = "1.18.20"
     config['lombok.addLombokGeneratedAnnotation'] = 'true'
     config['lombok.getter.noIsPrefix'] = 'true'
 }
