--- a/build.gradle
+++ b/build.gradle
@@ -122,6 +122,12 @@ coveralls {
     jacocoReportPath "build/reports/jacoco/test/jacocoTestReport.xml"
 }
 
+javadoc {
+  doFirst {
+    options.addBooleanOption('-no-module-directories', true)
+  }
+}
+
 gitPublish {
     repoUri = 'git@github.com:stripe/stripe-java.git'
     branch = 'gh-pages'
